# roomba_ros

./: CMakeLists.txt  README.md  mainpage.dox  manifest.xml  package.xml  plan for competition 3.txt
extras/: git_usage.txt  vim_usage.txt
include/: rgb2hsv.h
launch/: cylinder.launch  t2.launch
maps/: lab.pgm  lab2.pgm  lab2.yaml  predavalnica_final.pgm  predavalnica_final.yaml  ucilnica.pgm  ucilnica.yaml  ucilnicaNOVO.pgm  ucilnicaNOVO.yaml  up.pgm  up.yaml
scripts/: amcl_test  ferns_setup  n  navigate  navigate2  talk  talk_qr  turtlebot_keyboard
skripte/: 1.sh  2.sh  3.sh  4.sh
src/: cluster.cpp  cylinder_segmentation.cpp  floor.cpp  hyper.cpp  marko.cpp
