<?xml version="1.0"?>
<package>
  <name>psywerx</name>
  <version>0.1.0</version>
  <description>Playing with turtlebot for final class competition</description>

  <maintainer email="gregor@majcen.rins">Gregor Majcen</maintainer>
  <maintainer email="jaka@cikac.rins">Jaka Cikac</maintainer>
  <maintainer email="marko@lalovic.rins">Marko Lalovic</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>sound_play</build_depend>
  <build_depend>zbar_ros</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>pcl</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>sound_play</run_depend>
  <run_depend>zbar_ros</run_depend>
</package>
